test(concurrency): release gated work before closing test resources
Keep failed assertions from stranding callbacks, replay prefetch, or cache reconstruction workers. Bound completion checks and release worker gates before executor and client teardown.